@@ -26,11 +26,15 @@ How to build & install libvte compatible library using mlterm engine.
   => mlterm inside gnome-terminal is started.
 
 * Notice
-  o Because it is mlterm that works in gnome-terminal or etc,
+  o Because it is mlterm that works inside gnome-terminal or etc,
     - Configuration files in ~/.mlterm/ are applied.
     - Configuration protocol (like '$ mlcc [key] [value]') is mostly available.
     - Pressing Ctrl+Button3 shows 'mlconfig' menu.
-    
+
+  o Default value of following options are not same as that of normal mlterm.
+    [Option]       [Default Value]                            (Normal mlterm)
+    type_engine => xft (if compiled with --enable-anti-alias) (xcore)
+  
   o Following functions which normal mlterm provides are not available.
     - Daemon mode
     - Multiple ptys using Ctrl+F1 / Ctrl+F2 / Ctrl+F3
